--- a/ui/popup.html
+++ b/ui/popup.html
@@ -14,7 +14,7 @@
     body {
       width: 320px;
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(135deg, #1a1a1a 0%, #000000 100%);
       color: #ffffff;
       padding: 20px;
     }
@@ -22,6 +22,8 @@
     .header {
       text-align: center;
       margin-bottom: 20px;
+      padding-bottom: 15px;
+      border-bottom: 2px solid #333;
     }
 
     .header h1 {
@@ -32,15 +34,24 @@
 
     .header p {
       font-size: 12px;
-      opacity: 0.9;
+      opacity: 0.8;
+      color: #ccc;
+    }
+
+    .company-badge {
+      font-size: 10px;
+      margin-top: 8px;
+      opacity: 0.7;
+      color: #999;
     }
 
     .section {
-      background: rgba(255, 255, 255, 0.15);
+      background: rgba(255, 255, 255, 0.1);
       backdrop-filter: blur(10px);
       border-radius: 12px;
       padding: 16px;
       margin-bottom: 12px;
+      border: 1px solid rgba(255, 255, 255, 0.15);
     }
 
     .section-title {
@@ -48,6 +59,7 @@
       font-weight: 600;
       margin-bottom: 12px;
       opacity: 0.95;
+      color: #fff;
     }
 
     .toggle-container {
@@ -60,20 +72,23 @@
     .toggle-label {
       font-size: 14px;
       font-weight: 500;
+      color: #fff;
     }
 
     .toggle-switch {
       position: relative;
       width: 48px;
       height: 26px;
-      background: rgba(255, 255, 255, 0.3);
+      background: rgba(255, 255, 255, 0.2);
       border-radius: 13px;
       cursor: pointer;
       transition: background 0.3s;
+      border: 1px solid rgba(255, 255, 255, 0.3);
     }
 
     .toggle-switch.active {
-      background: rgba(59, 130, 246, 0.8);
+      background: #333;
+      border-color: #666;
     }
 
     .toggle-slider {
@@ -82,13 +97,15 @@
       height: 20px;
       background: white;
       border-radius: 50%;
-      top: 3px;
-      left: 3px;
+      top: 2px;
+      left: 2px;
       transition: transform 0.3s;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
     }
 
     .toggle-switch.active .toggle-slider {
       transform: translateX(22px);
+      background: #e0e0e0;
     }
 
     .form-group {
@@ -101,6 +118,7 @@
       font-weight: 500;
       margin-bottom: 6px;
       opacity: 0.95;
+      color: #fff;
     }
 
     select, input {
@@ -108,7 +126,7 @@
       padding: 10px 12px;
       border: 1px solid rgba(255, 255, 255, 0.3);
       border-radius: 8px;
-      background: rgba(255, 255, 255, 0.25);
+      background: rgba(255, 255, 255, 0.15);
       color: #ffffff;
       font-size: 14px;
       font-family: inherit;
@@ -118,20 +136,20 @@
     select:focus, input:focus {
       outline: none;
       border-color: rgba(255, 255, 255, 0.6);
-      background: rgba(255, 255, 255, 0.3);
+      background: rgba(255, 255, 255, 0.25);
     }
 
     select option {
-      background: #667eea;
+      background: #1a1a1a;
       color: white;
     }
 
     .button {
       width: 100%;
       padding: 12px;
-      border: none;
+      border: 2px solid #fff;
       border-radius: 8px;
-      background: rgba(255, 255, 255, 0.3);
+      background: rgba(255, 255, 255, 0.1);
       color: white;
       font-size: 14px;
       font-weight: 600;
@@ -140,7 +158,8 @@
     }
 
     .button:hover {
-      background: rgba(255, 255, 255, 0.4);
+      background: #fff;
+      color: #000;
       transform: translateY(-1px);
     }
 
@@ -154,7 +173,8 @@
       margin-top: 12px;
       padding: 8px;
       border-radius: 6px;
-      background: rgba(34, 197, 94, 0.3);
+      background: rgba(255, 255, 255, 0.2);
+      border: 1px solid rgba(255, 255, 255, 0.3);
       display: none;
     }
 
@@ -172,7 +192,10 @@
       text-align: center;
       margin-top: 16px;
       font-size: 11px;
-      opacity: 0.8;
+      opacity: 0.6;
+      color: #999;
+      padding-top: 12px;
+      border-top: 1px solid #333;
     }
   </style>
 </head>
@@ -180,6 +203,9 @@
   <div class="header">
     <h1>⏰ TimeZone Converter</h1>
     <p>Smart date/time detection & conversion</p>
+    <div class="company-badge">
+      Latent — An Alpha OBS LLP Venture
+    </div>
   </div>
 
   <div class="section">
@@ -204,7 +230,7 @@
   <div class="status" id="statusMessage">Settings saved successfully!</div>
 
   <div class="footer">
-    Version 5.2.1 • Built with ❤️
+    Version 5.2.2
   </div>
 
   <script src="popup.js"></script>
