Fix date off-by-one bug in detector.js (v5.2.4)
- Fixed parseDayMonthTimeTz() date comparison logic
- Fixed parseTimeTzOnDate() similar issue
- Dates like '11 Oct 7 PM EST' now correctly show Oct 11
- Updated version to 5.2.4

--- a/welcome/welcome.html
+++ b/welcome/welcome.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome to Smart TimeZone Converter</title>
+  <link rel="stylesheet" href="../ui/tooltip.css">
   <style>
     * {
       margin: 0;
@@ -450,6 +451,11 @@
     </div>
   </div>
 
+  <!-- Content Scripts for Timezone Detection and Conversion -->
+  <script src="../content/detector.js"></script>
+  <script src="../content/converter.js"></script>
+  <script src="../content/main.js"></script>
+  
   <script src="welcome.js"></script>
 </body>
 </html>
